--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
 #jumbotronjawn {
     width: 100%;
     height: 65vh;
-    background-image: url(../assets/trenton_capitol1.jpg);
+    background-image: url(assets/trenton_capitol1.jpg);
     background-repeat: no-repeat;
     background-position-y: 50%;
 }
