--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ body {
     margin-bottom: 4px;
 }
 
-#democratic-candidates {
+#democratic-candidates, #republican-candidates {
     width: 1200px;
     display: grid;
     justify-self: center;
@@ -346,3 +346,90 @@ a.long-name {
     margin-top: 20px;
 }
 
+#simonsen-last-name {
+    margin-left: 80px;
+}
+
+#donato-last-name {
+    margin-left: 24px;
+}
+
+#luisi-last-name {
+    margin-left: 56px;
+}
+
+#taylor-last-name {
+    margin-left: 78px;
+}
+
+#sauro-last-name {
+    margin-left: 48px;
+}
+
+/* Candidate profile page styles */
+
+.title-info {
+    display: grid;
+    font-family: 'REM', sans-serif;
+    justify-items: center;
+    margin-top: 16px;
+    width: 100%;
+}
+
+.title-info > h2 {
+    color: red;
+    font-size: 32px;
+    font-weight: 900;
+    text-transform: uppercase;
+}
+
+.running-for {
+    display: flex;
+    font-weight: 700;
+    margin-bottom: 8px;
+}
+
+.position {
+    margin-left: 8px;
+}
+
+.incum-or-challenger {
+    display: flex;
+    text-transform: uppercase;
+    width: 20%;
+    justify-content: space-around;
+}
+
+.active {
+    background: red;
+    color: white;
+    border-radius: 6px;
+    border: 2px solid grey;
+    padding: 8px;
+}
+
+.inactive {
+    background: grey;
+    color: #bfc1c2;
+    border-radius: 6px;
+    border: 2px solid white;
+    padding: 8px;
+    opacity: .5;
+}
+
+.candidate-pic-box {
+    display: grid;
+    justify-items: center;
+    width: 100%;
+    margin-top: 12px;
+}
+
+.candidate-pic-box > img {
+    width: 429px;
+    height: 429px;
+} 
+
+.cover {
+    object-fit: cover;
+    border-radius: 6px;
+}
