--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body {
     background-position-y: 50%;
 }
 
-/* Shared typography styles */
+/* Homepage styles */
 
 .container {
     font-family: 'Lora', serif;
@@ -68,10 +68,9 @@ body {
     margin-bottom: 8px;
 }
 
-/* Homepage styles */
-
 .logo {
-
+    display: grid;
+    place-items: center;
 }
 
 .ms-heading, .ss-heading {
@@ -83,6 +82,8 @@ body {
     width: 70%;
     margin-bottom: 18px;
     line-height: 30px;
+    display: grid;
+    justify-items: center;
 }
 
 .ms-content {
