--- a/style.css
+++ b/style.css
@@ -61,11 +61,19 @@ body {
 }
 
 .container-subh {
-    margin-bottom: 18px;
+    margin-bottom: 32px;
 }
 
 .container-subh > p {
     margin-bottom: 8px;
+}
+
+.container-subh > p:nth-of-type(1) {
+    font-size: 14px;
+}
+
+.container-subh > p:nth-of-type(2) {
+    font-size: 12px;
 }
 
 .logo {
@@ -73,17 +81,52 @@ body {
     place-items: center;
 }
 
+.main-content-box-with-shadow {
+    box-shadow:
+    3px 3px 6px 3px rgba(0, 0, 0, 0.1),
+    -3px -3px 3px 3px rgba(247, 251, 255, 0.5),
+    3px 3px 8px 2px rgba(0, 0, 0, 0) inset,
+    -3px -3px 7px 2px rgba(247, 251, 255, 0) inset;
+    padding: 24px;
+    border-radius: 16px;
+    width: 70%;
+    display: grid;
+    justify-items: center;
+}
+
 .ms-heading, .ss-heading {
     font-family: 'Calistoga', cursive;
     margin-bottom: 12px;
+    font-size: 22px;
+    letter-spacing: 3px;
+    text-transform: uppercase;
 }
 
-.ms-content, .ss-content {
+.ms-content, .ss-content, .ss-closing-remarks {
     width: 70%;
     margin-bottom: 18px;
     line-height: 30px;
     display: grid;
     justify-items: center;
+}
+
+.ms-content, .ss-content {
+    box-shadow: inset .2rem .2rem .5rem #c8d0e7, 
+               inset -.2rem -.2rem .5rem #c8d0e7;
+    padding: 20px;
+    border-radius: 12px;
+}
+
+.ss-content > ul {
+    list-style: none;
+}
+
+.ss-closing-remarks {
+    width: 60% !important;
+}
+
+.ss-closing-remarks > p {
+    margin-bottom: 8px;
 }
 
 .ms-content {
