--- a/style.css
+++ b/style.css
@@ -528,3 +528,77 @@ a.long-name {
     text-transform: uppercase;
     font-weight: 800;
 }
+
+/* Get Involved Styles */
+
+.main-content-box-with-shadow-gi {
+    box-shadow:
+    3px 3px 6px 3px rgba(0, 0, 0, 0.1),
+    -3px -3px 3px 3px rgba(247, 251, 255, 0.5),
+    3px 3px 8px 2px rgba(0, 0, 0, 0) inset,
+    -3px -3px 7px 2px rgba(247, 251, 255, 0) inset;
+    padding: 24px;
+    border-radius: 16px;
+    width: 70%;
+    display: grid;
+    justify-items: center;
+    margin-top: 24px;
+}
+
+.get-involved-intro-heading, .get-involved-steps-heading {
+    font-family: 'Calistoga', cursive;
+    margin-bottom: 12px;
+    font-size: 22px;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+}
+
+.get-involved-intro-content, .get-involved-steps-content, .get-involved-closing-remarks {
+    width: 70%;
+    margin-bottom: 18px;
+    line-height: 30px;
+    display: grid;
+    justify-items: center;
+}
+
+.get-involved-intro-content, .get-involved-steps-content {
+    box-shadow: inset .2rem .2rem .5rem #c8d0e7, 
+               inset -.2rem -.2rem .5rem #c8d0e7;
+    padding: 20px;
+    border-radius: 12px;
+}
+
+.get-involved-intro-content {
+    text-align: center;
+}
+
+.get-involved-h1 {
+    margin-bottom: 18px;
+}
+
+.gi-ol, .gi-ul {
+   list-style-type: none; 
+}
+
+.gi-ul {
+    width: 90%;  
+    margin-top: 12px;  
+}
+
+.gl-li:nth-of-type(3) {
+    display: grid;
+    justify-items: center;
+}
+
+.gi-ul-li {
+    margin-bottom: 8px;
+}
+
+.get-involved-closing-remarks > p {
+    text-align: center;
+}
+
+.gl-li-title > p {
+    margin-top: 12px;
+    text-align: center;
+}
