--- a/style.css
+++ b/style.css
@@ -646,3 +646,89 @@ a.long-name {
 .special-info {
     font-size: 14px;
 }
+
+/* About Styles */
+
+.main-content-with-box-shadow-about {
+    box-shadow:
+    3px 3px 6px 3px rgba(0, 0, 0, 0.1),
+    -3px -3px 3px 3px rgba(247, 251, 255, 0.5),
+    3px 3px 8px 2px rgba(0, 0, 0, 0) inset,
+    -3px -3px 7px 2px rgba(247, 251, 255, 0) inset;
+    padding: 24px;
+    border-radius: 16px;
+    width: 70%;
+    display: grid;
+    justify-items: center;
+    margin: 24px 0 24px 0;
+}
+
+.our-mission, .our-process, .our-suggestion {
+    display: grid;
+    justify-items: center;
+}
+
+.our-mission-heading, .our-process-heading, .our-suggestion-heading {
+    font-family: 'Calistoga', cursive;
+    margin-bottom: 12px;
+    font-size: 22px;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+}
+
+.our-mission-content, .our-process-content, .our-suggestion-content {
+    box-shadow: inset .2rem .2rem .5rem #c8d0e7, 
+               inset -.2rem -.2rem .5rem #c8d0e7;
+    padding: 20px;
+    border-radius: 12px;
+    width: 70%;
+    margin-bottom: 18px;
+    line-height: 30px;
+    display: grid;
+    justify-items: center;
+}
+
+.about-h1 {
+    margin-top: 36px;
+}
+
+.content-1, .ideal-system {
+    text-align: center;
+    padding: 12px;
+}
+
+.ideal-system-li {
+    list-style-type: none;
+    margin: 12px 0 12px 0;
+    font-weight: 600;
+}
+
+.bullet {
+    list-style-type: none;
+    text-align: left;
+}
+
+.op-section, .os-section {
+    text-align: center;
+    margin: 12px 0 12px 0;
+    text-align: center;
+    padding: 12px;
+}
+
+.os-ol {
+    padding: 12px;
+    display: grid;
+}
+
+.os-subheading {
+    justify-self: center;
+    margin-bottom: 8px;
+}
+
+.os-li {
+    list-style-type: none;
+}
+
+/* Contact Styles */
+
+/* Responsive Design */
