closer to a perfect mobile ballot

--- a/style.css
+++ b/style.css
@@ -289,7 +289,7 @@ body {
 #sample-ballot {
     font-family: 'REM', sans-serif;
     display: grid;
-    width: 100%;
+    width: 100vw;
 }
 
 .sb-top-box {
@@ -485,13 +485,13 @@ body {
     color: black;
     justify-self: center;
     font-weight: 900;
-    font-size: clamp(18px, 4vw, 36px);
+    font-size: clamp(22px, 4vw, 36px);
     margin-left: 16px; 
 }
 
 a.long-name {
     margin-left: 4px;
-    font-size: 28px;
+    font-size: clamp(22px, 3vw, 28px);
     justify-self: start;
 }
 
@@ -936,9 +936,59 @@ a.long-name {
         border-right: 3px solid black;
     }
 
-    .last-name > a {
-        margin-left: clamp(16px, 10vw, 72px);
+    .last-name > a, .last-name.long-name {
+        display: grid;
+        justify-self: end;
+        padding-right: 12px;
+        margin-left: 0;
+        text-align: end;
     }
+    .a-row-1 {
+        display: grid;
+        grid-template-rows: repeat(2, 1fr);
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .a-row-a.org, .a-row-a.number-a-and-circle {
+        display: grid;
+        grid-row: 1;
+    }
+
+    .first-name {
+        display: grid;
+        grid-row: 2;
+        grid-column: 2;
+        padding-right: 12px;
+    }
+
+    #simonsen-last-name,    
+    #donato-last-name,
+    #luisi-last-name, 
+    #taylor-last-name,
+    a#capizola.long-name {
+        margin-left: 0;
+    }
+  }
+
+  @media screen and (max-width: 501px) {
+
+    .title-big {
+        font-size: 18px;
+    }
+
+    .office-title {
+        min-width: 156px;
+    }
+
+    .a {
+        max-width: 156px;
+    }
+
+    .number-a-and-circle {
+        max-width: 73.55px;
+    }
+
+
   }
 
 
