--- a/style.css
+++ b/style.css
@@ -939,14 +939,14 @@ a.long-name {
     .last-name > a, .last-name.long-name {
         display: grid;
         justify-self: end;
-        padding-right: 12px;
-        margin-left: 0;
+        margin-left: -12px;
         text-align: end;
     }
     .a-row-1 {
         display: grid;
         grid-template-rows: repeat(2, 1fr);
         grid-template-columns: repeat(2, 1fr);
+        max-width: 156px;
     }
 
     .a-row-a.org, .a-row-a.number-a-and-circle {
@@ -958,7 +958,7 @@ a.long-name {
         display: grid;
         grid-row: 2;
         grid-column: 2;
-        padding-right: 12px;
+        margin-left: -12px;
     }
 
     #simonsen-last-name,    
@@ -982,12 +982,21 @@ a.long-name {
 
     .a {
         max-width: 156px;
+        padding-right: 8px;
     }
 
     .number-a-and-circle {
         max-width: 73.55px;
     }
 
+    .push-down-last-name {
+        margin-top: 12px;
+    }
+
+    .push-down-last-name-double > a{
+        margin-top: 24px;
+        font-size: 18px;
+    }
 
   }
 
