--- a/style.css
+++ b/style.css
@@ -946,7 +946,6 @@ a.long-name {
         display: grid;
         grid-template-rows: repeat(2, 1fr);
         grid-template-columns: repeat(2, 1fr);
-        max-width: 156px;
     }
 
     .a-row-a.org, .a-row-a.number-a-and-circle {
@@ -968,6 +967,11 @@ a.long-name {
     a#capizola.long-name {
         margin-left: 0;
     }
+
+    .a {
+        padding-right: 8px;
+    }
+    
   }
 
   @media screen and (max-width: 501px) {
@@ -976,29 +980,36 @@ a.long-name {
         font-size: 18px;
     }
 
+    .push-down-last-name > a {
+        margin-top: 12px;
+    }
+
+    .push-down-last-name-double > a {
+        margin-top: 24px;
+        font-size: 18px;
+    }
+
+  }
+
+@media screen and (max-width: 401px) {
+
     .office-title {
         min-width: 156px;
     }
 
+    .a-row-1 {
+        max-width: 156px;
+    }
+
     .a {
         max-width: 156px;
-        padding-right: 8px;
     }
 
     .number-a-and-circle {
         max-width: 73.55px;
     }
 
-    .push-down-last-name {
-        margin-top: 12px;
-    }
-
-    .push-down-last-name-double > a{
-        margin-top: 24px;
-        font-size: 18px;
-    }
-
-  }
+}
 
 
 /* Shared stock container styles for home, about, etc.*/
