--- a/style.css
+++ b/style.css
@@ -675,11 +675,22 @@ a.long-name {
     margin-bottom: 16px;
 }
 
+.agenda-thesis > ul {
+    text-align: start;
+    padding: 20px;
+    max-width: 330px;
+}
+
 .sub-heading {
     color: red;
     text-transform: uppercase;
     font-weight: 800;
     margin: 8px 0 8px 0;
+}
+
+.website {
+    display: flex;
+    flex-direction: column;
 }
 
 /* Get Involved Styles */
@@ -931,6 +942,49 @@ a.long-name {
     margin-bottom: 8px;
 }
 
+/* Unanswered questions */
+
+.main-content-with-box-shadow-ua {
+    box-shadow:
+    3px 3px 6px 3px rgba(0, 0, 0, 0.1),
+    -3px -3px 3px 3px rgba(247, 251, 255, 0.5),
+    3px 3px 8px 2px rgba(0, 0, 0, 0) inset,
+    -3px -3px 7px 2px rgba(247, 251, 255, 0) inset;
+    padding: 24px;
+    border-radius: 16px;
+    width: 70%;
+    display: grid;
+    justify-items: center;
+    margin: 24px 0 24px 0;
+}
+
+.ua-content {
+    box-shadow: inset .2rem .2rem .5rem #c8d0e7, 
+               inset -.2rem -.2rem .5rem #c8d0e7;
+    padding: 20px;
+    border-radius: 12px;
+    width: 70%;
+    margin-bottom: 18px;
+    line-height: 30px;
+    display: grid;
+    justify-items: start;
+    text-align: start;
+}
+
+.ua-content > p {
+    margin-bottom: 10px;
+}
+
+.ua-short-description {
+    margin: 12px 0 12px 0;
+    text-align: center;
+    padding: 16px;
+}
+
+.ua-h1 {
+    margin-bottom: 8px;
+}
+
 /* Responsive Design */
 
 /* Ballot Page */
@@ -1050,7 +1104,8 @@ a.long-name {
     .main-content-box-with-shadow-gi,
     .main-content-with-box-shadow-events,
     .main-content-with-box-shadow-about,
-    .main-content-with-box-shadow-issues {
+    .main-content-with-box-shadow-issues,
+    .main-content-with-box-shadow-ua {
         width: 95%;   
     }
   }
@@ -1060,7 +1115,7 @@ a.long-name {
     .ms-content, .ss-content, .ss-closing-remarks,
     .get-involved-intro-content, .get-involved-steps-content,
     .event-card, .our-mission-content, .our-process-content,
-    .our-suggestion-content, .issues-content {
+    .our-suggestion-content, .issues-content, .ua-content {
         width: 97%;
     }
   }
