--- a/style.css
+++ b/style.css
@@ -47,16 +47,17 @@ body {
     height: 60px;
     padding: 1rem;
     display: flex;
+    border-radius: 18px;
     align-items: center;
     justify-content: center;
-    background: white;
+    background: #3d61af;
 }
 
 .menu-wrap .hamburger > div {
     position: relative;
     width: 100%;
     height: 2px;
-    background: black;
+    background: white;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -117,7 +118,7 @@ body {
 }
 
 .menu-wrap .menu > div {
-    background-color: rgba(26, 39, 208, 0.5);
+    background-color: rgba(26, 39, 208, 0.7);
     border-radius: 50%;
     width: 200vw;
     height: 200vw;
