styling and office title edits on school board elections

--- a/style.css
+++ b/style.css
@@ -321,6 +321,12 @@ body {
     margin-top: 8px;
 }
 
+.school-board-instructions {
+
+    margin-bottom: 16px;
+
+}
+
 .sb-top-box > h4 {
     font-size: 18px;
     font-weight: 900;
