--- a/child_pages/timeline-style.css
+++ b/child_pages/timeline-style.css
@@ -1,87 +1,34 @@
-html, body {
-  position: relative;
-  height: 100%;
-  overflow: hidden;
-  background: #eee;
-}
-
-.swiper-container-wrapper .swiper-slide {
+#timeline-container {
   display: flex;
-  background: #fff;
-  min-height: 300px;
   align-items: center;
-  justify-content: center;
-  border-radius: 10px;
-}
-
-.swiper-container-wrapper .swiper-slide  {
-  font-size: 18px;
-  opacity: 0;
-  transition: 0.5s ease 0.5s;
-}
-
-.title {
-  font-size: 18px;
-  opacity: 1;
-  transition: 0.5s ease 0.5s;
-}
-
-.title.visible {
-  opacity: 1;
-}
-
-.swiper-container-wrapper .swiper-slide-active .title {
-  opacity: 1;
-}
-
-.swiper-container-wrapper .swiper-pagination-progressbar {
-  position: relative;
-  margin-bottom: 70px;
-  background-color: transparent;
-  height: 4px;
-  border-bottom: 1px solid #888;
-  width: 75%;
-}
-
-.swiper-container-wrapper .swiper-pagination-progressbar-fill {
-  background-color: #000;
-  height: 3px;
-  top: 2px;
-}
-
-.swiper-container-wrapper .swiper-pagination-custom {
-  position: relative;
-  list-style: none;
-  margin: 1rem 0;
-  padding: 0;
-  display: flex;
-  line-height: 1.66;
-  bottom: 0;
-  z-index: 11;
-  width: 75%;
-  display: flex;
-}
-
-.swiper-container-wrapper .swiper-pagination-custom .swiper-pagination-switch {
-  position: relative;
+  justify-content: space-around;
   width: 100%;
-  height: 30px;
-  line-height: 30px;
-  display: block;
+  margin: 50px 0;
 }
 
-.swiper-container-wrapper .swiper-pagination-custom .swiper-pagination-switch .switch-title {
-  position: absolute;
-  font-weight: 400;
-  right: 0;
-  transform: translateX(50%);
-  transition: 0.2s all ease-in-out;
-  transition-delay: 0s;
+.timeline-event {
+  position: relative;
+  width: 50px;
+  text-align: center;
   cursor: pointer;
-  z-index: 1;
 }
 
-.swiper-container-wrapper .swiper-pagination-custom .swiper-pagination-switch.active .switch-title {
-  font-weight: 400;
-  transition-delay: 0.4s;
+.timeline-date {
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+.timeline-dot {
+  width: 20px;
+  height: 20px;
+  background-color: #3498db;
+  border-radius: 50%;
+  margin: 0 auto;
+}
+
+/* Style for displaying event details */
+#eventInfo {
+  margin-top: 30px;
+  text-align: center;
+  font-size: 18px;
 }
