--- a/child_pages/timeline-style.css
+++ b/child_pages/timeline-style.css
@@ -1,54 +1,58 @@
 #timeline-container {
-  position: relative;
-  width: 100%;
-  display: flex; /* Using flex to layout events horizontally */
-  flex-wrap: nowrap; /* Prevent events from wrapping to the next line */
-  justify-content: space-between; /* Evenly space out the events */
-}
-
-.timeline-event {
-  position: relative;
-  width: 12%; /* Adjust width based on your preference */
-  align-items: center;
-}
-
-.timeline-content {
-  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.timeline-date {
-  margin-bottom: 10px;
-  text-align: center;
-}
-
-:root {
-  --dot-radius: 10px; 
+.timeline-event {
+  margin-bottom: 40px;
+  cursor: pointer; /* Indicate it’s clickable */
 }
 
 .timeline-dot {
   background-color: blue;
   border-radius: 50%;
-  width: calc(var(--dot-radius)*2);
-  height: calc(var(--dot-radius)*2);
+  width: 20px;
+  height: 20px;
   margin-bottom: 10px;
-  margin-left: calc(50% - var(--dot-radius));
 }
 
-.timeline-description {
+.timeline-date {
   text-align: center;
 }
 
-.timeline-event:nth-child(odd) {
+/* Modal styles */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
   top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
 }
 
-.timeline-event:nth-child(even) {
-  bottom: -150px; /* Adjust this based on your design needs */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
 }
 
-.eventInfo {
-  text-align: center;
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
