--- a/child_pages/timeline-style.css
+++ b/child_pages/timeline-style.css
@@ -9,12 +9,17 @@
   cursor: pointer; /* Indicate it’s clickable */
 }
 
+:root {
+  --dot-radius: 10px;
+}
+
 .timeline-dot {
   background-color: blue;
   border-radius: 50%;
   width: 20px;
   height: 20px;
   margin-bottom: 10px;
+  margin-left: calc(50% - var(--dot-radius));
 }
 
 .timeline-date {
