--- a/child_pages/timeline-style.css
+++ b/child_pages/timeline-style.css
@@ -39,6 +39,7 @@
   overflow: auto;
   background-color: rgb(0,0,0);
   background-color: rgba(0,0,0,0.4);
+  text-align: center;
 }
 
 .modal-content {
@@ -64,6 +65,6 @@
   cursor: pointer;
 }
 
-#eventDetials {
+#eventDetails {
   text-align: center;
 }
